--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react-cookie": "^8.0.1",
     "react-dom": "19.1.0",
     "react-dropzone": "^14.3.8",
+    "typescript": "^5.9.2",
     "xlsx": "^0.18.5"
   },
   "devDependencies": {
@@ -24,7 +25,6 @@
     "@types/react-dom": "^19",
     "eslint": "^9",
     "eslint-config-next": "15.5.3",
-    "tailwindcss": "^4",
-    "typescript": "^5.9.2"
+    "tailwindcss": "^4"
   }
 }
