--- a/package.json
+++ b/package.json
@@ -9,22 +9,22 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@tailwindcss/postcss": "^4",
     "next": "15.5.3",
     "react": "19.1.0",
     "react-cookie": "^8.0.1",
     "react-dom": "19.1.0",
     "react-dropzone": "^14.3.8",
+    "tailwindcss": "^4",
     "typescript": "^5.9.2",
     "xlsx": "^0.18.5"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
-    "@tailwindcss/postcss": "^4",
     "@types/node": "^20.19.15",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "eslint": "^9",
-    "eslint-config-next": "15.5.3",
-    "tailwindcss": "^4"
+    "eslint-config-next": "15.5.3"
   }
 }
