--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -66,8 +66,10 @@ jobs:
           # Create directories with proper permissions
           sudo mkdir -p ${{ env.RELEASES_DIR }}
           sudo mkdir -p ${{ env.SHARED_DIR }}
+          sudo mkdir -p ${{ env.REMOTE_DIR }}
           sudo chown -R ubuntu:ubuntu ${{ env.RELEASES_DIR }}
           sudo chown -R ubuntu:ubuntu ${{ env.SHARED_DIR }}
+          sudo chown -R ubuntu:ubuntu ${{ env.REMOTE_DIR }}
           echo "Directories created successfully"
           EOF
 
@@ -98,7 +100,7 @@ jobs:
           fi
 
           # Flip current -> new release atomically
-          ln -sfn "${NEW_RELEASE}" "${{ env.CURRENT_LINK }}"
+          sudo ln -sfn "${NEW_RELEASE}" "${{ env.CURRENT_LINK }}"
 
           # PM2 reload (zero downtime) or start first time
           if pm2 describe "${{ env.APP_NAME }}" >/dev/null 2>&1; then
